--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -2,6 +2,12 @@
   --transition: 300ms ease-in-out;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -13,20 +19,10 @@ html {
   box-sizing: inherit;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-body {
-  margin: 0;
-}
-
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  min-height: 100vh;
 }
 
 button {
