--- a/static/styles/product-preview-card-component/styles.css
+++ b/static/styles/product-preview-card-component/styles.css
@@ -95,13 +95,13 @@ button.cooldown .added {
 
 main {
   padding: 1.6rem;
-  margin-top: 1.2rem;
+  padding-top: 1.2rem;
 }
 
 @media screen and (min-width: 640px) {
   main {
     padding-top: 0;
-    margin-top: 17.5rem;
+    padding-top: 17.5rem;
   }
 }
 
