--- a/static/styles/results-summary-component/styles.css
+++ b/static/styles/results-summary-component/styles.css
@@ -17,11 +17,13 @@
 body {
   font-family: 'Hanken Grotesk', sans-serif;
 }
+
 @media screen and (min-width: 640px) {
   body {
     padding-top: 28.4rem;
   }
 }
+
 main {
   display: flex;
   margin: 0 auto;
@@ -43,14 +45,15 @@ main {
 }
 
 /* typography */
-h2 {
+span.score__display__number {
+  display: block;
   font-weight: 800;
   font-size: 5.6rem;
   line-height: 7.2rem;
 }
 
 @media screen and (min-width: 640px) {
-  h2 {
+  span.score__display__number {
     font-size: 7.2rem;
   }
 }
@@ -68,14 +71,14 @@ h3 {
   }
 }
 
-h4 {
+h2 {
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 2.345rem;
 }
 
 @media screen and (min-width: 640px) {
-  h4 {
+  h2 {
     font-size: 2.4rem;
     line-height: 3.127rem;
   }
