--- a/static/styles/product-preview-card-component/styles.css
+++ b/static/styles/product-preview-card-component/styles.css
@@ -65,7 +65,8 @@ button:hover {
   background-color: var(--color-deep-aquamarine-hover);
 }
 
-button div {
+button span.add,
+button span.added {
   position: absolute;
   transform-origin: 50% 50% -30px;
   transition: all .2s ease;
