--- a/static/styles/password-generator-app/styles.css
+++ b/static/styles/password-generator-app/styles.css
@@ -246,7 +246,124 @@ input[type="checkbox"]:focus {
   border-color: var(--color-neon-green);
 }
 
+.strength-meter {
+  padding: 1.4rem 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--color-deep-dark-gray);
+}
+
+@media screen and (min-width: 640px) {
+  .strength-meter {
+    padding: 2.1rem 3.15rem 2rem 3.2rem;
+  }
+}
+
+.strength-meter__value {
+  font-size: 1.8rem;
+  line-height: 2.376rem;
+}
+
+@media screen and (min-width: 640px) {
+  .strength-meter__value {
+    font-size: 2.4rem;
+    line-height: 3.168rem;
+  }
+}
+
+.strength-meter__container {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+@media screen and (min-width: 640px) {
+  .strength-meter__container {
+    gap: 1.55rem;
+  }
+}
+
+.strength-meter__indicators {
+  display: flex;
+  gap: .8rem;
+}
+
+.strength-meter__indicator {
+  width: 1rem;
+  height: 2.8rem;
+  background-color: var(--color-deep-dark-gray);
+  border: 2px solid var(--color-light-gray);
+  transition: var(--transition) border-color, var(--transition) background-color;
+}
+
+.strength-meter__indicator.on.red {
+  background-color: var(--color-red);
+  border-color: var(--color-red);
+}
+
+.strength-meter__indicator.on.orange {
+  background-color: var(--color-orange);
+  border-color: var(--color-orange);
+}
+
+.strength-meter__indicator.on.yellow {
+  background-color: var(--color-yellow);
+  border-color: var(--color-yellow);
+}
+
+.strength-meter__indicator.on.green {
+  background-color: var(--color-neon-green);
+  border-color: var(--color-neon-green);
+}
+
+.generate-btn {
+  width: 100%;
+  gap: 1.6rem;
+  display: flex;
+  height: 5.6rem;
+  font-size: 1.6rem;
+  margin-top: 1.6rem;
+  align-items: center;
+  line-height: 2.112rem;
+  justify-content: center;
+  border: 2px solid var(--color-neon-green);
+  background-color: var(--color-neon-green);
+  transition: var(--transition) color, var(--transition) background-color, var(--transition) gap;
+}
+
+.generate-btn svg path {
+  transition: var(--transition) fill;
+}
+
+.generate-btn:hover {
+  gap: .8rem;
+  background-color: transparent;
+  color: var(--color-light-gray);
+}
+
+.generate-btn:hover svg path {
+  fill: var(--color-light-gray);
+}
+
+@media screen and (min-width: 640px) {
+  .generate-btn {
+    font-size: 1.8rem;
+    margin-top: 3.2rem;
+    line-height: 2.376rem;
+    gap: 2.4rem;
+  }
+
+  .generate-btn:hover {
+    gap: 1.2rem;
+  }
+}
+
 /* utils */
 .t-gray {
   color: var(--color-gray);
+}
+
+.t-light-gray {
+  color: var(--color-light-gray);
 }
