--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -69,6 +69,56 @@ picture {
   animation-name: contentLeft, contentFadeIn;
 }
 
+.horizontal-shake {
+  animation: horizontal-shaking 0.35s 2;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inline-flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0)
+  }
+
+  25% {
+    transform: translateX(5px)
+  }
+
+  50% {
+    transform: translateX(-5px)
+  }
+
+  75% {
+    transform: translateX(5px)
+  }
+
+  100% {
+    transform: translateX(0)
+  }
+}
+
 @keyframes contentLeft {
   from {
     transform: translate3d(-40px, 0, 0);
@@ -97,28 +147,4 @@ picture {
   to {
     opacity: 1;
   }
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.inline-flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
