--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -97,6 +97,26 @@ picture {
   justify-content: center;
 }
 
+.flex {
+  display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.items-center {
+  align-items: center;
+}
+
 @keyframes horizontal-shaking {
   0% {
     transform: translateX(0)
