--- a/static/styles/nft-preview-card-component/styles.css
+++ b/static/styles/nft-preview-card-component/styles.css
@@ -64,9 +64,48 @@ img {
 }
 
 .equilibrium {
+  cursor: pointer;
   overflow: hidden;
+  position: relative;
   border-radius: .8rem;
-  margin-bottom: 2.24rem;
+  margin-bottom: 2.48rem;
+}
+
+.equilibrium .overlay {
+  inset: 0;
+  opacity: 0;
+  position: absolute;
+  transition: var(--transition) opacity;
+}
+
+.equilibrium:hover .overlay {
+  opacity: 1;
+}
+
+.equilibrium .overlay svg {
+  z-index: 1;
+  transform: translateY(1rem);
+  transition: 400ms ease-in-out transform;
+}
+
+.equilibrium .overlay::after {
+  content: '';
+  width: 4rem;
+  height: 4rem;
+  position: absolute;
+  opacity: .5;
+  border-radius: 50%;
+  transform: scale(1);
+  background-color: var(--color-cyan);
+  transition: 400ms ease-in-out transform;
+}
+
+.equilibrium:hover .overlay::after {
+  transform: scale(12);
+}
+
+.equilibrium:hover .overlay svg {
+  transform: translateY(0);
 }
 
 .profile {
