--- a/static/styles/order-summary-component/styles.css
+++ b/static/styles/order-summary-component/styles.css
@@ -33,7 +33,7 @@ h2 {
 @media screen and (min-width: 640px) {
   h2 {
     font-size: 2.8rem;
-    line-height: 3.704rem;
+    line-height: 3.8rem;
   }
 }
 
@@ -45,6 +45,7 @@ p {
   color: var(--color-gray-blue);
   margin-top: 1.6rem;
   padding: 0 .8rem;
+  letter-spacing: .007rem;
 }
 
 @media screen and (min-width: 640px) {
@@ -67,7 +68,7 @@ p {
   .plan-price__plan,
   .plan-price__price {
     font-size: 1.6rem;
-    line-height: 2.117rem;
+    line-height: 2.07rem;
   }
 }
 
@@ -78,6 +79,7 @@ p {
 
 .plan-price__price {
   font-weight: 500;
+  letter-spacing: .02rem;
   color: var(--color-gray-blue);
 }
 
@@ -168,7 +170,7 @@ section {
 @media screen and (min-width: 640px) {
   .btn-change {
     font-size: 1.4rem;
-    line-height: 1.852rem;
+    line-height: 1.92rem;
   }
 }
 
@@ -180,7 +182,7 @@ section {
   width: 100%;
   content: '';
   left: 50%;
-  bottom: 0;
+  bottom: 4px;
   height: 1px;
   position: absolute;
   transition: var(--transition) width;
