--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -143,9 +143,21 @@ main {
     padding: 0 1.6rem;
   }
 
+}
+
+.actions__container {
+  width: 100%;
+  display: flex;
+  padding: 0 1.6rem;
+}
+
+@media screen and (min-width: 700px) {
   .actions__container {
     max-width: 45rem;
     margin: 0 auto;
-    width: 100%;
   }
+}
+
+.next-btn {
+  margin-left: auto;
 }
