--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -45,17 +45,46 @@ main {
     height: auto;
     padding: 1.6rem;
     grid-template-columns: minmax(20rem, 27.4rem) minmax(40rem, auto);
+    grid-template-rows: auto 10.4rem;
     height: 60rem;
   }
 }
 
 /* components */
+button {
+  user-select: none;
+}
+
+button:active {
+  transform: translateY(2px);
+}
+
 .step-nav {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url('/images/multi-step-form/bg-sidebar-mobile.svg');
   height: 45.867vw;
   max-height: 23rem;
+}
+
+.step-nav__detail {
+  display: none;
+}
+
+@media screen and (min-width: 700px) {
+  .step-nav__detail {
+    display: flex;
+    margin-left: 1.6rem;
+    flex-direction: column;
+    align-items: flex-start;
+    text-transform: uppercase;
+  }
+
+  .step-nav__detail span:last-of-type {
+    font-weight: 700;
+    line-height: 1.6rem;
+    letter-spacing: .1rem;
+  }
 }
 
 @media screen and (min-width: 700px) {
@@ -86,13 +115,19 @@ main {
 }
 
 .nav-btn {
-  width: 3.3rem;
-  height: 3.3rem;
+  width: 3.1rem;
+  height: 3.1rem;
   border-radius: 50%;
   color: #fff;
   font-size: 1.4rem;
   font-weight: 700;
   border: 1px solid #fff;
+}
+
+.nav-btn.current {
+  color: var(--color-denim);
+  border-color: var(--color-sky-blue);
+  background-color: var(--color-sky-blue);
 }
 
 .steps {
@@ -141,13 +176,13 @@ main {
     grid-row: 2/3;
     grid-column: 2/3;
     padding: 0 1.6rem;
+    height: 10.4rem;
   }
-
 }
 
 .actions__container {
   width: 100%;
-  display: flex;
+  height: 100%;
   padding: 0 1.6rem;
 }
 
@@ -158,6 +193,48 @@ main {
   }
 }
 
+.actions button {
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+  border-radius: .8rem;
+  height: 4.8rem;
+  width: 12.3rem;
+}
+
+.back-btn {}
+
 .next-btn {
   margin-left: auto;
+  background-color: var(--color-denim);
+}
+
+.confirm-btn {
+  margin-left: auto;
+  background-color: var(--color-purple);
+}
+
+/* utils */
+.t-heading {}
+
+.t-body-l {}
+
+.t-body-m {}
+
+.t-body-s {
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+}
+
+.t-light-blue {
+  color: var(--color-light-blue);
+}
+
+.t-white {
+  color: #fff;
+}
+
+.t-gray {
+  color: var(--color-gray);
 }
