--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -45,7 +45,7 @@ main {
     height: auto;
     padding: 1.6rem;
     grid-template-columns: minmax(20rem, 27.4rem) minmax(40rem, auto);
-    grid-template-rows: auto 10.4rem;
+    grid-template-rows: auto 8rem;
     height: 60rem;
   }
 }
@@ -142,6 +142,7 @@ button:active {
     position: static;
     grid-row: 1/3;
     grid-column: 2/3;
+    padding-left: 3.2rem;
   }
 }
 
@@ -175,8 +176,8 @@ button:active {
     position: static;
     grid-row: 2/3;
     grid-column: 2/3;
-    padding: 0 1.6rem;
-    height: 10.4rem;
+    padding-left: 1.6rem;
+    height: 100%;
   }
 }
 
@@ -190,6 +191,7 @@ button:active {
   .actions__container {
     max-width: 45rem;
     margin: 0 auto;
+    padding: 0;
   }
 }
 
