--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -4,7 +4,6 @@
   --color-light-gray: #D6D9E6;
   --color-very-light-gray: #F8F9FF;
   --color-bg: #EFF5FF;
-  --color-border-color: #D6D9E6;
   --color-light-blue: #ABBCFF;
   --color-sky-blue: #BEE2FD;
   --color-orange: #FFAF7E;
@@ -48,6 +47,134 @@ main {
     grid-template-rows: auto 8rem;
     height: 60rem;
   }
+}
+
+.step-nav__container {
+  gap: 1.6rem;
+  max-width: 18rem;
+  margin: 0 auto;
+  padding-top: 3.2rem;
+}
+
+@media screen and (min-width: 700px) {
+  .step-nav__container {
+    gap: 3.2rem;
+    padding-top: 4rem;
+    flex-direction: column;
+    max-width: 16rem;
+  }
+}
+
+
+.steps {
+  padding: 0 1.6rem;
+  position: absolute;
+  top: 9.9rem;
+  width: 100%;
+}
+
+@media screen and (min-width: 700px) {
+  .steps {
+    position: static;
+    grid-row: 1/3;
+    grid-column: 2/3;
+    padding-right: 0;
+    padding-top: 4rem;
+  }
+}
+
+.steps__container {
+  background-color: #fff;
+  box-shadow: var(--showdow);
+  border-radius: 10px;
+  max-width: 40rem;
+  margin: 0 auto;
+  padding: 3.2rem 2.4rem;
+}
+
+@media screen and (min-width: 700px) {
+  .steps__container {
+    box-shadow: none;
+    border-radius: 0;
+    max-width: 45rem;
+    padding: 0;
+  }
+}
+
+
+.actions {
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 7.2rem;
+  position: absolute;
+  background-color: #fff;
+}
+
+@media screen and (min-width: 700px) {
+  .actions {
+    position: static;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    padding-left: 1.6rem;
+    height: 100%;
+  }
+}
+
+.actions__container {
+  width: 100%;
+  height: 100%;
+  padding: 0 1.6rem;
+}
+
+@media screen and (min-width: 700px) {
+  .actions__container {
+    max-width: 45rem;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
+.personal-info-inputs {
+  gap: 1.6rem;
+  margin-top: 2.2rem;
+}
+
+@media screen and (min-width: 700px) {
+  .personal-info-inputs {
+    gap: 2.4rem;
+    margin-top: 4rem;
+  }
+}
+
+.form-title {
+  margin-bottom: .9rem;
+}
+
+@media screen and (min-width: 700px) {
+  .form-title {
+    margin-bottom: 1.1rem;
+  }
+}
+
+/* typography */
+h2 {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+}
+
+@media screen and (min-width: 700px) {
+  h2 {
+    font-size: 3.2rem;
+    line-height: 3.7rem;
+  }
+}
+
+p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.5rem;
 }
 
 /* components */
@@ -98,22 +225,6 @@ button:active {
   }
 }
 
-.step-nav__container {
-  gap: 1.6rem;
-  max-width: 18rem;
-  margin: 0 auto;
-  padding-top: 3.2rem;
-}
-
-@media screen and (min-width: 700px) {
-  .step-nav__container {
-    gap: 3.2rem;
-    padding-top: 4rem;
-    flex-direction: column;
-    max-width: 16rem;
-  }
-}
-
 .nav-btn {
   width: 3.1rem;
   height: 3.1rem;
@@ -130,78 +241,20 @@ button:active {
   background-color: var(--color-sky-blue);
 }
 
-.steps {
-  padding: 0 1.6rem;
-  position: absolute;
-  top: 9.9rem;
-  width: 100%;
-}
-
-@media screen and (min-width: 700px) {
-  .steps {
-    position: static;
-    grid-row: 1/3;
-    grid-column: 2/3;
-    padding-left: 3.2rem;
-  }
-}
-
-.steps__container {
-  background-color: #fff;
-  box-shadow: var(--showdow);
-  border-radius: 10px;
-  max-width: 40rem;
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 700px) {
-  .steps__container {
-    box-shadow: none;
-    border-radius: 0;
-    max-width: 45rem;
-  }
-}
-
-.actions {
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 7.2rem;
-  position: absolute;
-  background-color: #fff;
-}
-
-@media screen and (min-width: 700px) {
-  .actions {
-    position: static;
-    grid-row: 2/3;
-    grid-column: 2/3;
-    padding-left: 1.6rem;
-    height: 100%;
-  }
-}
-
-.actions__container {
-  width: 100%;
-  height: 100%;
-  padding: 0 1.6rem;
-}
-
-@media screen and (min-width: 700px) {
-  .actions__container {
-    max-width: 45rem;
-    margin: 0 auto;
-    padding: 0;
-  }
-}
-
 .actions button {
   font-weight: 500;
-  font-size: 1.6rem;
-  line-height: 1.8rem;
   border-radius: .8rem;
   height: 4.8rem;
   width: 12.3rem;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+}
+
+@media screen and (min-width: 700px) {
+  .actions button {
+    font-size: 1.6rem;
+    line-height: 1.8rem;
+  }
 }
 
 .back-btn,
@@ -223,6 +276,82 @@ button:active {
 .confirm-btn {
   margin-left: auto;
   background-color: var(--color-purple);
+}
+
+.text-input label,
+.text-input .error {
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+}
+
+.text-input label {
+  font-weight: 400;
+}
+
+.text-input .error {
+  font-weight: 700;
+  color: var(--color-red);
+}
+
+@media screen and (min-width: 700px) {
+
+  .text-input label,
+  .text-input .error {
+    font-size: 1.4rem;
+    line-height: 1.6rem;
+  }
+}
+
+input {
+  box-sizing: border-box;
+}
+
+.text-input input {
+  padding: 0;
+  width: 100%;
+  height: 3.8rem;
+  margin-top: .3rem;
+  border-radius: .4rem;
+  padding-left: 1.6rem;
+  box-sizing: border-box;
+  border: 1px solid var(--color-light-gray);
+  transition: var(--transition) border-color;
+  outline: none;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1.7rem;
+  color: var(--color-denim);
+}
+
+.text-input input::placeholder {
+  color: var(--color-gray);
+}
+
+@media screen and (min-width: 700px) {
+  .text-input input {
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+  }
+}
+
+.text-input input.error {
+  border-color: var(--color-red);
+}
+
+.text-input input:not(.error):focus {
+  border-color: var(--color-purple);
+}
+
+@media screen and (min-width: 700px) {
+  .text-input input {
+    height: 4.6rem;
+    margin-top: .8rem;
+    border-radius: .8rem;
+  }
+}
+
+.text-input .error {
+  margin-left: auto;
 }
 
 /* utils */
@@ -248,4 +377,8 @@ button:active {
 
 .t-gray {
   color: var(--color-gray);
+}
+
+.t-denim {
+  color: var(--color-denim);
 }
