--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -307,12 +307,11 @@ input {
 }
 
 .text-input input {
-  padding: 0;
   width: 100%;
   height: 3.8rem;
   margin-top: .3rem;
+  padding: 0 1.6rem;
   border-radius: .4rem;
-  padding-left: 1.6rem;
   box-sizing: border-box;
   border: 1px solid var(--color-light-gray);
   transition: var(--transition) border-color;
