--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -415,6 +415,89 @@ input {
   transition: var(--transition) color;
 }
 
+.plans {
+  gap: 1.2rem;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  margin-top: 2.2rem;
+  margin-bottom: 2.4rem;
+}
+
+@media screen and (min-width: 700px) {
+  .plans {
+    gap: 1.8rem;
+    flex-direction: row;
+    margin-top: 4rem;
+    margin-bottom: 3.2rem;
+  }
+}
+
+.plans label {
+  cursor: pointer;
+  position: relative;
+  flex-grow: 1;
+}
+
+@media screen and (min-width: 700px) {
+  .plans label {
+    max-width: 13.8rem;
+  }
+}
+
+.plans input {
+  position: absolute;
+  visibility: hidden;
+}
+
+.plan__detail {
+  height: 7.7rem;
+  border-radius: .8rem;
+  padding-left: 1.6rem;
+  padding-top: 1.4rem;
+  border: 1px solid var(--color-light-gray);
+  transition: var(--transition) border-color, var(--transition) background-color;
+  display: flex;
+  gap: 1.4rem;
+  align-items: center;
+}
+
+@media screen and (min-width: 700px) {
+  .plan__detail {
+    height: auto;
+    flex-direction: column;
+    padding-top: 2rem;
+    gap: 3.9rem;
+    align-items: flex-start;
+    width: 100%;
+    padding-bottom: 2rem;
+  }
+}
+
+.plan__detail.selected {
+  border-color: var(--color-purple);
+  background-color: var(--color-very-light-gray)
+}
+
+.plan__name {
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+  margin-bottom: .7rem;
+}
+
+.plan__price {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  font-weight: 400;
+}
+
+.plan__free {
+  margin-top: .6rem;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+}
+
 /* utils */
 .t-heading {}
 
