--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -58,10 +58,11 @@ main {
 
 @media screen and (min-width: 700px) {
   .step-nav__container {
-    gap: 3.2rem;
+    gap: 3.1rem;
     padding-top: 4rem;
     flex-direction: column;
     max-width: 16rem;
+    margin-left: 3.2rem;
   }
 }
 
@@ -143,7 +144,7 @@ main {
 @media screen and (min-width: 700px) {
   .personal-info-inputs {
     gap: 2.4rem;
-    margin-top: 4rem;
+    margin-top: 3.47rem;
   }
 }
 
@@ -204,6 +205,7 @@ button:active {
     margin-left: 1.6rem;
     flex-direction: column;
     align-items: flex-start;
+    gap: .4rem;
     text-transform: uppercase;
   }
 
@@ -211,6 +213,7 @@ button:active {
     font-weight: 700;
     line-height: 1.6rem;
     letter-spacing: .1rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -306,7 +309,7 @@ input {
 
 .text-input input {
   width: 100%;
-  height: 3.8rem;
+  height: 4rem;
   margin-top: .3rem;
   padding: 0 1.6rem;
   border-radius: .4rem;
@@ -341,7 +344,7 @@ input {
 
 @media screen and (min-width: 700px) {
   .text-input input {
-    height: 4.6rem;
+    height: 4.8rem;
     margin-top: .8rem;
     border-radius: .8rem;
   }
@@ -426,7 +429,7 @@ input {
   .plans {
     gap: 1.8rem;
     flex-direction: row;
-    margin-top: 4rem;
+    margin-top: 3.47rem;
     margin-bottom: 3.2rem;
   }
 }
@@ -516,7 +519,7 @@ input {
 @media screen and (min-width: 700px) {
   .addons {
     gap: 1.6rem;
-    margin-top: 4rem;
+    margin-top: 3.47rem;
   }
 }
 
@@ -596,7 +599,7 @@ input {
 
 @media screen and (min-width: 700px) {
   .summary {
-    margin-top: 4rem;
+    margin-top: 3.47rem;
   }
 }
 
