--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -323,7 +323,7 @@ input {
   width: 100%;
   height: 4rem;
   margin-top: .3rem;
-  padding: 0 1.6rem;
+  padding: 0 1.5rem;
   border-radius: .4rem;
   box-sizing: border-box;
   border: 1px solid var(--color-light-gray);
@@ -726,6 +726,34 @@ input {
   font-weight: 700;
   font-size: 2rem;
   line-height: 2rem;
+}
+
+.thank-you {
+  text-align: center;
+  padding: 4.7rem 0;
+  max-width: 45rem;
+}
+
+@media screen and (min-width: 700px) {
+  .thank-you {
+    padding-top: 12.4rem;
+  }
+}
+
+.thank-you h2 {
+  margin-top: 2.4rem;
+  margin-bottom: .9rem;
+}
+
+@media screen and (min-width: 700px) {
+  .thank-you h2 {
+    margin-top: 3.2rem;
+    margin-bottom: 1.4rem;
+  }
+}
+
+.thank-you a {
+  color: var(--color-denim);
 }
 
 /* utils */
