--- a/static/styles/multi-step-form/styles.css
+++ b/static/styles/multi-step-form/styles.css
@@ -20,10 +20,7 @@ body {
 
 @media screen and (min-width: 700px) {
   body {
-    padding: 0 3.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 10.5rem 3.2rem 0;
   }
 }
 
@@ -46,6 +43,7 @@ main {
     grid-template-columns: minmax(20rem, 27.4rem) minmax(40rem, auto);
     grid-template-rows: auto 8rem;
     height: 60rem;
+    margin: 0 auto;
   }
 }
 
