--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -7,4 +7,23 @@ body {
 main {
   margin: 0 auto;
   max-width: 72rem;
+  padding: 1.6rem;
+}
+
+ul.solutions {
+  gap: 2.4rem;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 2.4rem 0;
+  justify-content: space-between;
+}
+
+ul.solutions .solution {
+  width: 100%;
+  max-width: 32rem;
+}
+
+ul.solutions .solution img {
+  width: 100%;
 }
