--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -23,6 +23,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-height: 100vh;
+  min-height: 100svh;
 }
 
 button {
