add rolling number web component

--- a/static/styles/age-calculator-app/styles.css
+++ b/static/styles/age-calculator-app/styles.css
@@ -96,3 +96,12 @@ form {
   font-style: italic;
   color: var(--color-red);
 }
+
+/* utils */
+.t-purple {
+  color: var(--color-purple);
+}
+
+.t-black {
+  color: var(--color-black);
+}
