--- a/static/styles/age-calculator-app/styles.css
+++ b/static/styles/age-calculator-app/styles.css
@@ -10,13 +10,15 @@
 https://stackoverflow.com/questions/3790935/can-i-hide-the-html5-number-input-s-spin-box */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
-    -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */
 }
 
 input[type=number] {
-    -moz-appearance:textfield; /* Firefox */
+  -moz-appearance: textfield;
+  /* Firefox */
 }
 
 body {
@@ -24,16 +26,36 @@ body {
   background-color: #F0F0F0;
 }
 
+/* layout */
+section {
+  padding: 0 1.6rem;
+}
+
+.container {
+  max-width: 84rem;
+  background-color: #fff;
+  padding: 4.8rem 2.4rem;
+  border-radius: 2.4rem 2.4rem 10rem 2.4rem;
+  gap: 3.2rem;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 640px) {
+  .container {
+    gap: 0;
+  }
+}
+
 /* components */
 form {
   display: flex;
   gap: 1.6rem;
-  justify-content: space-between;
 }
 
 .number-input {
   gap: .4rem;
 }
+
 @media screen and (min-width: 640px) {
   .number-input {
     gap: .8rem;
@@ -51,13 +73,18 @@ form {
   border: 1px solid var(--color-line);
   padding: 0 1.6rem;
   cursor: pointer;
+  width: 100%;
   transition: var(--transition) border-color;
+  caret-color: var(--color-purple);
 }
+
 .number-input input:hover,
 .number-input input:focus,
 .number-input input:focus-visible {
   border-color: var(--color-purple);
 }
+
+button:focus-visible,
 .number-input input:focus-visible {
   outline: 2px dotted var(--color-purple);
   outline-offset: 4px;
@@ -77,7 +104,9 @@ form {
   font-size: 1.2rem;
   line-height: 1.8rem;
 }
+
 @media screen and (min-width: 640px) {
+
   .number-input label,
   .number-input .error {
     font-size: 1.4rem;
@@ -95,6 +124,66 @@ form {
   font-weight: 400;
   font-style: italic;
   color: var(--color-red);
+}
+
+.age-display h2 {
+  font-style: italic;
+  font-weight: 800;
+  font-size: 5.6rem;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+  font-family: 'Poppins', sans-serif;
+}
+
+@media screen and (min-width: 640px) {
+  .age-display h2 {
+    font-size: 10.4rem;
+  }
+}
+
+.calculate-button {
+  position: relative;
+  justify-content: center;
+}
+
+@media screen and (min-width: 640px) {
+  .calculate-button {
+    justify-content: flex-end;
+  }
+}
+
+.calculate-button::before {
+  content: '';
+  position: absolute;
+  background-color: var(--color-line);
+  width: 100%;
+  height: 1px;
+  top: 50%;
+  z-index: 1;
+}
+
+.calculate-button button {
+  height: 6.4rem;
+  width: 6.4rem;
+  border-radius: 50%;
+  z-index: 2;
+  background-color: var(--color-purple);
+}
+
+@media screen and (min-width: 640px) {
+  .calculate-button button {
+    height: 9.6rem;
+    width: 9.6rem;
+  }
+}
+
+.calculate-button button:active {
+  transform: translateY(2px);
+}
+
+button:focus-visible,
+.calculate-button button:hover {
+  background-color: var(--color-black);
 }
 
 /* utils */
