--- a/static/styles/age-calculator-app/styles.css
+++ b/static/styles/age-calculator-app/styles.css
@@ -29,6 +29,12 @@ body {
 /* layout */
 section {
   padding: 0 1.6rem;
+  padding-top: 8.8rem;
+}
+@media screen and (min-width: 670px) {
+  section {
+    padding-top: 15.4rem;
+  }
 }
 
 .container {
@@ -43,6 +49,8 @@ section {
 @media screen and (min-width: 670px) {
   .container {
     gap: 0;
+    padding: 5.6rem;
+    border-radius: 2.4rem 2.4rem 20rem 2.4rem;
   }
 }
 
@@ -50,6 +58,11 @@ section {
 form {
   display: flex;
   gap: 1.6rem;
+}
+@media screen and (min-width: 670px) {
+  form {
+    gap: 3.2rem;
+  }
 }
 
 .number-input {
@@ -96,6 +109,7 @@ button:focus-visible,
     padding: 0 2.4rem;
     font-size: 3.2rem;
     line-height: 4.8rem;
+    height: 7.2rem;
   }
 }
 
@@ -133,6 +147,8 @@ button:focus-visible,
   line-height: 110%;
   letter-spacing: -0.02em;
   font-family: 'Poppins', sans-serif;
+  display: flex;
+  gap: 1.1rem;
 }
 
 @media screen and (min-width: 670px) {
