--- a/static/styles/age-calculator-app/styles.css
+++ b/static/styles/age-calculator-app/styles.css
@@ -155,13 +155,14 @@ button:focus-visible,
   line-height: 110%;
   letter-spacing: -0.02em;
   font-family: 'Poppins', sans-serif;
-  display: flex;
-  gap: 1.1rem;
 }
 
 @media screen and (min-width: 670px) {
   .age-display h2 {
     font-size: 10.4rem;
+  }
+  .age-display h2 .unit {
+    margin-left: 1.1rem;
   }
 }
 
