--- a/static/styles/age-calculator-app/styles.css
+++ b/static/styles/age-calculator-app/styles.css
@@ -26,15 +26,19 @@ body {
   background-color: #F0F0F0;
 }
 
+main {
+  min-height: 100vh;
+  min-height: 100svh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 /* layout */
 section {
   padding: 0 1.6rem;
-  padding-top: 8.8rem;
-}
-@media screen and (min-width: 670px) {
-  section {
-    padding-top: 15.4rem;
-  }
+  width: 100%;
 }
 
 .container {
