--- a/static/styles/age-calculator-app/styles.css
+++ b/static/styles/age-calculator-app/styles.css
@@ -27,18 +27,18 @@ body {
 }
 
 main {
-  min-height: 100vh;
-  min-height: 100svh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  height: 100%;
+  padding-top: 8.8rem;
+}
+@media screen and (min-width: 770px) {
+  main {
+    padding-top: 15.4rem;
+  }
 }
 
 /* layout */
 section {
   padding: 0 1.6rem;
-  width: 100%;
 }
 
 .container {
