--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,3 +1,7 @@
+html {
+  background-image: url('/grid.svg');
+  background-attachment: fixed;
+}
 body {
   font-size: 1.6rem;
   padding-top: 2.4rem;
